--- a/src/assets/scss/pages/_top-page.scss
+++ b/src/assets/scss/pages/_top-page.scss
@@ -3,7 +3,7 @@
         position: relative;
     }
     .sect_1 {
-        // margin-top: -109px;
+        margin-top: -109px;
         z-index: 4;
 
         @include is-sp {
@@ -191,7 +191,7 @@
                             @include is-max(930px) {
                                 padding-left: 10px;
                             }
-                
+                            
                             @include is-max(836px) {
                                 width: 60%;
                             }
@@ -208,6 +208,10 @@
                                 @include is-max(900px) {
                                     @include font-line(22);
                                 }
+
+                                @include is-max(370px) {
+                                    font-size: 6vw
+                                }
                             }
                 
                             &-sub {
@@ -215,6 +219,11 @@
                                 color: $color-text03;
                                 font-family: cross-platform-yu-gothic;
                                 letter-spacing: 0.3em;
+
+                                
+                                @include is-max(370px) {
+                                    font-size: 3vw;
+                                }
                             }
                         }
                         
@@ -350,15 +359,22 @@
         
 
         .clipPath {
-            clip-path: polygon(0 0%, 100% 0%, 100% 100%, 0% 100%);
-            background-color: #fff;
+            clip-path: polygon(0 12%, 100% 0%, 100% 90%, 0% 100%);
+            padding:150px 0;
+
+
+            @include is-max (867px) {
+                clip-path: polygon(-6% 12%, 100% 0%, 100% 90%, 0% 100%);
+            }
+
+            @include is-sp {
+                padding:95.5px 0 77.5px 0;
+                clip-path: polygon(-198% 12%, 100% 0%, 100% 90%, -120% 100%);
+            }
         }
         
         .sect_2-cntnt {
-            padding-top: 95px;
-            padding-bottom: 50px;
-        
-
+    
             &-row {
                 display: flex;
                 justify-content: space-between;
@@ -463,11 +479,11 @@
                             @include is-max(930px) {
                                 padding-left: 10px;
                             }
-                
-                            @include is-max(836px) {
-                                width: 60%;
-                            }
-                
+
+                            @include is-max(840px) {
+                                width: 90%;
+                            }  
+
                 
                             &-ttl {
                                 @include font-line(26);
@@ -480,6 +496,9 @@
                                 @include is-max(900px) {
                                     @include font-line(22);
                                 }
+                                @include is-max (500px) {
+                                    font-size: 6vw;
+                                }
                             }
                 
                             &-sub {
@@ -487,6 +506,10 @@
                                 color: $color-text03;
                                 font-family: cross-platform-yu-gothic;
                                 letter-spacing: 0.3em;
+
+                                @include is-max (500px) {
+                                    font-size: 3vw;
+                                }
                             }
                         }
                         
@@ -576,14 +599,26 @@
 
         .bg_4 {
             position: absolute;
-            top: 1%;
+            position: absolute;
+            top: -32%;
             right: 7%;
 
             @include is-sp {
                 display: none;
             }
         }
+        .sec2bg {
+            display: none;
+            position: absolute;
+            top: -6%;
+            left: 0;
+            z-index: -1;
 
+            @include is-sp {
+                display: block;
+                width: 145px;
+            }
+        }
         .bg_5 {
             position: absolute;
             left: -6%;
@@ -595,6 +630,7 @@
                 left: 2%;
                 top: 3%;
                 z-index: -1;
+                display: none;
             }
         }
         .bg_6 {
@@ -604,9 +640,10 @@
 
             @include is-sp {
                 position: absolute;
-                right: 11px;
-                top: 13.2%;
+                right: 31%;
+                top: 2%;
                 width: 200px;
+                z-index: -1;
             }
         }
     }
@@ -616,19 +653,27 @@
        
       
         .clipPath {
-            // clip-path: polygon(0 17%, 100% 0%, 100% 88%, 0% 100%);
-            clip-path:polygon(0% 17%, 100% 0%, 100% 88%, 0% 100%);
+            clip-path: polygon(0 12%, 100% 0%, 100% 90%, 0% 100%);
+            padding:150px 0;
             background: linear-gradient(to right, #2579BF,#2593D5);
+
+            @include is-max (867px) {
+                clip-path: polygon(-6% 12%, 100% 0%, 100% 90%, 0% 100%);
+            }
+
+            @include is-sp {
+                padding:95.5px 0 70.5px 0;
+                clip-path: polygon(-198% 12%, 100% 0%, 100% 90%, -120% 100%);
+            }
         }
 
         &-cntnt {
-            padding-top: 200px;
-            padding-bottom: 144px;
+            padding: 110px 0px;
 
-            @include is-sp {
-                padding-top: 500px;
-                padding-bottom: 200px;
-            }
+            // @include is-sp {
+            //     padding-top: 500px;
+            //     padding-bottom: 200px;
+            // }
 
             &-row {
                 display: flex;
@@ -736,10 +781,9 @@
                                 padding-left: 10px;
                             }
                 
-                            @include is-max(836px) {
-                                width: 60%;
-                            }
-                
+                            @include is-max(840px) {
+                                width: 90%;
+                            }  
                 
                             &-ttl {
                                 @include font-line(26);
@@ -752,6 +796,10 @@
                                 @include is-max(900px) {
                                     @include font-line(22);
                                 }
+
+                                @include is-max (500px) {
+                                    font-size: 6vw;
+                                }
                             }
                 
                             &-sub {
@@ -759,6 +807,10 @@
                                 color: $color-text03;
                                 font-family: cross-platform-yu-gothic;
                                 letter-spacing: 0.3em;
+
+                                @include is-max (500px) {
+                                    font-size: 3vw;
+                                }
                             }
                         }
                         
@@ -846,15 +898,16 @@
 
         .bg_2 {
             position: absolute;
-            top: 17%;
+            top: 12%;
             left: -6%;
             z-index: -1;
 
             @include is-sp {
                 position: absolute;
-                top: 22%;
-                left: 3%;
+                top: 6%;
+                left: 2%;
                 z-index: -1;
+                width: 145px;
             }
         }
         .bg_3 {
@@ -864,9 +917,9 @@
             z-index: -1;
 
             @include is-sp {
-                bottom: 70%;
+                bottom: 86%;
                 right: 1%;
-                width: 200px;
+                width: 163px;
             }
         }
     }
@@ -984,9 +1037,10 @@
                                 padding-left: 10px;
                             }
                 
-                            @include is-max(836px) {
-                                width: 60%;
-                            }
+                            @include is-max(840px) {
+                                width: 90%;
+                            }  
+
                 
                 
                             &-ttl {
@@ -1000,6 +1054,10 @@
                                 @include is-max(900px) {
                                     @include font-line(22);
                                 }
+
+                                @include is-max(500px) {
+                                    font-size: 6vw;
+                                }
                             }
                 
                             &-sub {
@@ -1007,6 +1065,10 @@
                                 color: $color-text03;
                                 font-family: cross-platform-yu-gothic;
                                 letter-spacing: 0.3em;
+
+                                @include is-max(500px) {
+                                    font-size: 3vw;
+                                }
                             }
                         }
                         
@@ -1110,10 +1172,11 @@
         }
         .bg_2_rd {
             position: absolute;
-            top: 47%;
+            top: 55%;
             left: -6%;
             z-index: -1;
             opacity: 0.4;
+
             @include is-sp {
                 display: none
                
@@ -1129,6 +1192,7 @@
                 left: 3%;
                 z-index: -1;
                 display: block;
+                width: 145px;
             }
         }
         .bg_3_rd {
@@ -1141,7 +1205,7 @@
                 bottom: 82%;
                 right: 2%;
                 z-index: -1;
-                width: 300px;
+                width: 163px;
             }
         }
     }
@@ -1226,6 +1290,7 @@
                 right: 4%;
                 top: 5%;
                 z-index: -1;
+                width: 122px;
             }
         }
         .bg_8 {
@@ -1236,9 +1301,10 @@
 
             @include is-sp {
                 position: absolute;
-                top: 38%;
+                top: 28%;
                 left: 10%;
                 z-index: -1;
+                width: 115px;
             }
         }
 
@@ -1268,6 +1334,7 @@
                 position: absolute;
                 left: 0%;
                 top: 25%;
+                width: 115px;
             }
         }
         .bg_3 {
@@ -1288,6 +1355,7 @@
                 top: -5%;
                 right: 4%;
                 display: block;
+                width: 122px;
             }
         }
     }
@@ -1346,7 +1414,13 @@
                 background: linear-gradient(to left, #59aee7, #4A93D1);
                 position: relative;
                 z-index: -2;
-    
+                
+                @include is-sp {
+                    width: 100%;
+                    height: 261px;
+                    margin:0 auto 20px;
+                }
+            
                 &-txt {
                     position: absolute;
                     left: 0%;
@@ -1355,6 +1429,10 @@
                     background: linear-gradient( 
                     100deg, rgba(114,159,223,0.238831) 14%, #244d7e 100%);
                     width: 65%;
+
+                    @include is-max(890px) {
+                        width: 90%;
+                    }
     
                     p:nth-child(1){
                         font-size: 10px;
@@ -1368,11 +1446,12 @@
                         font-size: 1rem;
                         font-size: 20px;
                         letter-spacing: 0.18em;
+
+                        @include is-sp {
+                            @include font-line(10)
+                        }
                     }
 
-                    // @include is-max(1005px) {
-                    //     width: 100%;
-                    // }
                 }
                 &-bdg {
                     position: absolute;
@@ -1395,13 +1474,16 @@
                     height: 450px;
                     width: 390px;
                     background: url(../../release/image/page/top-page/sec7_img.png);   
-                    background-position: center;        
+                   
+                    background-position: center; 
+                    
+                    @include is-sp {
+                        width: 260px;
+                        height: 308px;
+                        background-size: cover;
+                        
+                    }
                 }   
-
-                @include is-sp {
-                    width: 100%;
-                    margin-bottom: 40px;
-                }
             }
     
             &-rows-02 {
@@ -1471,6 +1553,7 @@
                 top: 3.5%;
                 right: 2%;
                 z-index: -4;
+                width: 176px;
             }
         }
         .bg_9 {
@@ -1484,6 +1567,14 @@
             top: 53%;
             left: 0%;
             z-index: -4;
+
+           @include is-sp {
+            position: absolute;
+            top: 27%;
+            left: 0%;
+            z-index: -4;
+            width: 115px;
+           }
         }
 
     }
@@ -1599,18 +1690,41 @@
             top: 0%;
             right: 3.5%;
             z-index: -1;
+
+            @include is-sp {
+                display: none;
+            }
         }
         .bg_13 {
             position: absolute;
             top: 26.2%;
             left: 0%;
             z-index: -1;
+
+            @include is-sp {
+                display: none;
+            }
         }
         .bg_14 {
             position: absolute;
             bottom: 33%;
             right: 0%;
             z-index: -1;
+
+            @include is-sp {
+                display: none;
+            }
+        }
+
+        .sec8bg {
+            position: absolute;
+            right: 4%;
+            display: none;
+
+            @include is-sp {
+                width: 122px;
+                display: block;
+            }
         }
     }
 
